<resources>
    <string name="app_name">MRep</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="by_clicking_here">By clicking here, you agree to our</string>
    <string name="customer_agreement">Customer Agreement</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_password">Enter password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="appointment">Appointment</string>
    <string name="call_planner">Call Planner</string>
    <string name="home">Home</string>
    <string name="block">Block</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="allinvites">All Invites</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="speciality">Speciality</string>
    <string name="mobile">Mobile</string>
    <string name="city">City</string>
    <string name="state_of_registration">State of Registration</string>
    <string name="registration_number">Rgistration Number</string>
    <string name="hospital_clinic">Hospital / Clinic</string>
    <string name="profile_registration">Profile Registration</string>
    <string name="submit">Submit</string>
    <string name="click_here_login">Click here to go Login Page</string>
    <string name="your_account_created_successfully">Your Account has been created successfully</string>
    <string name="resend"><u>Resend</u></string>
    <string name="otp">One Time Password </string>
    <string name="verification">Verification</string>
    <string name="read_understood">I have read and understood Terms and Conditions</string>
    <string name="please_read_terms_conditions">Please read full terms and conditions here</string>
    <string name="mrep_maintance_data">MREP maintains all your data in encrypted form to protect your personal data. The contact details provided will be used only for sending communications regarding Mrep and will not be shared with any third party.</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="blocked">Blocked</string>
    <string name="notification">Notification</string>
    <string name="Search">search</string>
    <string name="my_information">My Information</string>
    <string name="account_setting">Account setting</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="company">Company</string>
    <string name="please_enter_registered_mobile_number_to_receive_a_verification_code">Please enter registered mobile number to receive a verification code</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="proceed">Proceed</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="verify">Verify</string>
    <string name="please_enter_the_verification_code_we_sent_to_your_mobile_number">Please enter the verification code we sent to your mobile number</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="event_date">Event Date</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="time_gap_between_the_calls">Time Gap Between the calls</string>
    <string name="cancel_time_slot">Cancel Time Slot</string>
    <string name="modify">Modify</string>
    <string name="next">Next</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_manager_info">Edit Manager Info</string>
    <string name="addEvent">Add Event</string>
    <string name="reschedule_event">Reschedule Event</string>
    <string name="mrep_allow_medical_representatives_to_book_appointments_as_per_the_time_slot_defined_here">mRep allow Medical Representatives to book appointments as per the time slot defined here.</string>
    <string name="start_date">Start Date</string>
    <string name="from_time">From Time</string>
    <string name="to_time">To Time</string>
    <string name="repeat">Repeat</string>
    <string name="mrep_allows_medical_repsentatives_to_book_appointments_as_per_the_time_slot_defined_here">mRep allows Medical Repsentatives to book appointments as per the time slot defined here</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discard">discard</string>
    <string name="save">Save</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="addtimeslot">Add Time Slot</string>
    <string name="delete_the_timeslot">Delete TimeSlot</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="rep_name">Rep Name</string>
    <string name="duration">Duration</string>
    <string name="move_to_end">Move to End</string>
    <string name="block_rep">Block Rep</string>
    <string name="pincode">PinCode</string>
    <string name="modify_event">Modify Event</string>
    <string name="modifymrepappointment">ModifyAppointment</string>
    <string name="update_time_slot">Update Time Slot</string>
    <string name="video_call">Video Call</string>
    <string name="agora_app_id">5155e1211d164ed19f19de6f0734fd12</string>
    <string name="agora_access_token">0065155e1211d164ed19f19de6f0734fd12IADxj23eCeSq1S0XzntSTEoam3hxtl9S1NkP6klJY8SKC4AO3FUAAAAAEAA222oFGtmSXwEAAQAa2ZJf</string>
<!--    0065155e1211d164ed19f19de6f0734fd12IAAgstWv2W+ekaPqMBkpEM1VysfVOZZICOP1Zxq4TQTOnDpf1cwAAAAAEAA222oFtNmSXwEAAQC02ZJf-->
    <string name="label_channel_name">demo1</string>
    <string name="or">OR</string>
    <string name="doctor">Doctor</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="representative">Representative</string>
    <string name="business_email_id">Business Email ID</string>
    <string name="state_province_region">State / Province / Region</string>
    <string name="company_information">Company Information</string>
    <string name="company_name">Company Name</string>
    <string name="division">Division</string>
    <string name="coverage_area">Coverage Area</string>
    <string name="manager_information">Manager Information</string>
    <string name="manager_info">Manager Info</string>
    <string name="manager_mobile_number">Manager Mobile Number</string>
    <string name="second_line_manager">Second Line Manager</string>
    <string name="first_line_manager">First Line Manager</string>
    <string name="second_line_manager_name">Second Line Manager Name</string>
    <string name="first_line_manager_name">First Line Manager Name</string>
    <string name="doctor_list">Doctor List</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="appointment_info">Appointment Info</string>
    <string name="join_call">Join Call</string>
    <string name="new_txt">New</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mrepnumber">mRepNumber</string>
    <string name="status">Status</string>
    <string name="edit_info">Edit Info</string>
    <string name="send_invite">Send Invite</string>
    <string name="view_availability">View Availability</string>
    <string name="cancel">Cancel</string>
    <string name="meeting_link">Meeting Link</string>
    <string name="delete_appointment">Delete Appointment</string>
    <string name="delete_this_time_slot">Delete this Time Slot</string>
    <string name="delete_all_upcoming_time_slot">Delete all upcoming time slot</string>
    <string name="delete_this_or_delete_all_upcoming_time_slot_will_also_delete_your_appointment_permanently">Delete this or delete all upcoming time slot will also delete your appointment permanently</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="are_you_sure_want_to_send_appointment_request_to_doctor">Are you sure want to send appointment request to doctor?</string>
    <string name="medical_council_registration_no">Medical Council Registration No</string>
    <string name="appointment_calendar">Appointment Calendar</string>
    <string name="view_calendar">View Calendar</string>
    <string name="label_stop_camera">Stop Camera</string>
    <string name="label_start_camera">Start Camera</string>
    <string name="label_stop_sharing_your_screen">Stop Sharing</string>
    <string name="label_start_sharing_your_screen">Start Sharing</string>
    <string name="msg_connection_error">Connection Error</string>
    <string name="title_activity_video_call">VideoCallActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_the_email">Enter the email</string>

</resources>