<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8dsp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_16dsp"
        android:layout_margin="@dimen/_8dsp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_the_timeslot"
            android:textColor="@color/black"
            android:textSize="@dimen/_18dsp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_cancel_dialog"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:background="@drawable/ic_close" />
    </LinearLayout>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dsp"
        android:text="@string/delete_this_or_delete_all_upcoming_time_slot_will_also_delete_your_appointment_permanently"
        android:textColor="@color/black"
        android:textSize="@dimen/_12dsp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dsp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_this_time_slot"
            android:textSize="@dimen/_14dsp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dsp"
            android:layout_marginBottom="@dimen/_16dsp"
            android:text="@string/delete_all_upcoming_time_slot"
            android:textSize="@dimen/_14dsp" />
    </RadioGroup>


</LinearLayout>
